- Remove the URL textbox and replace it with a checkbox that denotes whether the (still visible) location should be sent. - Add a checkbox for specifying if the URL should be shortened. This fixes issue #12. - Position the status input dialog right above the statusbar and use a horizontal arrangement for the groups. This is an attempt to fix issue #8. - Centralize the URL inclusion and shortening conditionals, before the dispatch to the various service handlers. - Center the About dialog.

--- a/src/skin/overlay.css
+++ b/src/skin/overlay.css
@@ -15,15 +15,10 @@
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 #statusText {
-	color: #0000FF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: x-large;
-	font-weight: bold;
+	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 }
 #charcount {
-	color: #0000FF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: x-large;
+	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-weight: bold;
 }
 #twitter-icon {
